<resources>
    <string name="app_name">smol Lunch Tray</string>
    <string name="choose_entree">Entrée Dishes</string>
    <string name="lunch_tray">Lunch Tray</string>
    <string name="choose_side_dish">Side Dishes</string>
    <string name="choose_accompaniment">Accompaniment Dishes</string>
    <string name="enjoy">Have a Good Day</string>
<!--entree-->
    <string name="cauliflower">Cauliflower</string>
    <string name="bean">Three Bean Chilli</string>
    <string name="pasta">Mushroom Pasta</string>
    <string name="skillet">Spicy Black Bean Skillet</string>
<!--side dish-->
    <string name="salad">Summer Salad</string>
    <string name="soup">Butternut Squash Soup</string>
    <string name="potato">Spicy Potato</string>
    <string name="rice">Coconut Rice</string>
<!--accompaniment-->
    <string name="roll">Lunch Roll</string>
    <string name="berries">Mixed Berries</string>
    <string name="veggies">Pickled Veggies</string>
<!--buttons-->
    <string name="next_btn">Next</string>
    <string name="start_btn">ORDER !</string>
    <string name="cancel_btn">Cancel</string>
<!--summary-->
    <string name="order_summary">Order Summary</string>
    <string name="entree_choice">1. %s</string>
    <string name="side_dish_choice">2. %s</string>
    <string name="accompaniment_choice">3. %s</string>
    <string name="unit_price">%s</string>

    <string name="subtotal">Subtotal %s</string>
    <string name="tax_amount">Tax: %s</string>
    <string name="total_amount">TOTAL: %s</string>
    <string name="place_order">Place Order!</string>

<!--description-->
    <string name="cauliflower_desc">Whole cauliflower brinded, roasted, and deep fried</string>
    <string name="bean_desc">Black beans, red beans, kidney beans slowly cooked topped with onion</string>
    <string name="pasta_desc">Penne pastas, mushroom, basil with plum tomatoes cooked in garlic and olive oil</string>
    <string name="skillet_desc">Seasonal vegetables, black beans , house spice blend, served with avacardo and quick pickled onions</string>

    <string name="salad_desc">Heirloom tomatoes, butter lettuce, peaches, avocado, balsamic dressing</string>
    <string name="soup_desc">Roasted butternut squash, roasted peppers, chili oil</string>
    <string name="potato_desc">Marble potatoes, roasted, and fried in house spice blend</string>
    <string name="rice_desc">Rice, coconut milk, lime and sugar</string>

    <string name="roll_desc">Fresh baked roll made in house</string>
    <string name="berries_desc">Strawberries, blueberries, raspberries and huckleberries</string>
    <string name="veggies_desc">Pickled cucumbers and carrots, made in home</string>
</resources>