<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="accompanimentFragment"
            type="com.njk.smollunchtray.AccompanimentFragment" />
        <variable
            name="viewModel"
            type="com.njk.smollunchtray.model.LunchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccompanimentFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:checkedButton="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        style="@style/RadioTextBig"
                        tools:text="roll"
                        android:text="@string/roll"
                        android:onClick="@{()->accompanimentFragment.chooseEntree(1)}"
                        android:id="@+id/radio_button_1"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <RadioButton
                        tools:text="berries"
                        android:text="@string/berries"
                        android:onClick="@{()->accompanimentFragment.chooseEntree(2)}"
                        android:id="@+id/radio_button_2"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                    <RadioButton
                        tools:text="veggies"
                        android:text="@string/veggies"
                        android:onClick="@{()->accompanimentFragment.chooseEntree(3)}"
                        android:id="@+id/radio_button_3"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                </RadioGroup>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@{@string/subtotal(viewModel.subtotal)}" />
                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/next_btn"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/cancel_btn"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>